---
config:
  layout: elk
---
classDiagram
    direction LR

%% ========== Domain ==========
    class User {
        + getAge() int
        + getId() String
        + getNickname() String
        + getRole() Role
        + getSalt() String
        + getPasswordHash() String
        - String id
        - String passwordHash
        - String nickname
        - String salt
    }
    class Role {
        <<enumeration>>
        + ADMIN
        + MEMBER
    }
    class Post {
        + getPostId() int
        + getTitle() String
        + getCategory() String
        + getPrice() int
        - int postId
        - String title
        - String category
        - int priceInWon
    }
    class PostStatus {
        <<enumeration>>
        + ON_SALE
        + SOLD
        + IN_PROGRESS
        + COMPLETED
    }
    class ConditionLevel {
        <<enumeration>>
        + HIGH
        + MEDIUM
        + LOW
    }
    class Notification {
        + getNotificationId() int
        + getNotificationMessage() String
        + isRead() boolean
        - int notificationId
        - String notificationMessage
    }
    class NotificationType {
        <<enumeration>>
        + TRADE_ACCEPTED
        + TRADE_COMPLETED
        + TRADE_REQUEST
    }
    class Trade {
        + getTradeId() int
        + getRelatedPostId() int
        + getBuyerUserId() String
        + getSellerUserId() String
        - int tradeId
        - int relatedPostId
    }
    class TradeStatus {
        <<enumeration>>
        + COMPLETED
        + CANCELLED
        + IN_PROGRESS
        + REQUESTED
        + ACCEPTED
    }

%% Builders
    class UserBuilder {
        + build() User
        + role(Role) UserBuilder
    }
    class PostBuilder {
        + build() Post
        + title(String) PostBuilder
    }

%% Relations
    User --> Role
    Post --> PostStatus
    Post --> ConditionLevel
    Notification --> NotificationType
    Trade --> TradeStatus
    UserBuilder --> User : «builds»
    PostBuilder --> Post : «builds»
